@@ -7,6 +7,8 @@ core:
   so any future version will probably be defined as only major.minor but evantually
   as major.minor_rev if a package revision is necessary. This policy could be revised
   after any major upgrade.
+* Fix configuration reloading to keep set script options
+* Avoid a not critical perl error while reloading HTTP server
 
 inventory:
 * Fix #771: added Acer monitor serial support for models (G227HQL, G236HL, R221Q, S273HL)
